# KisanAgent-Env

./: .gitignore  Dockerfile  KisanAgent_Learning_Simulation.ipynb  README.md  debug_json.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdvisorySection.jsx  ProgressBar.jsx  ScoreRing.jsx
server/: __init__.py  env.py  main.py  models.py
server/agents/: advisory_agent.py  diagnosis_agent.py  evaluator_agent.py
server/data/: scenarios.py
server/graders/: grader.py
server/tasks/: crop_disease.py  fertilizer_advice.py  irrigation_schedule.py  market_optimization.py  planting_advice.py
